# aaai

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  RELEASING.md  ROADMAP.md  TERMS_OF_USE.md
.github/: SECURITY.md
.github/workflows/: ci.yaml  release.yaml  windows-msix.yaml
crates/aaai/: Cargo.toml  README.md
crates/aaai-cli/: Cargo.toml  README.md
crates/aaai-cli/.cargo/: config.toml
crates/aaai-cli/src/: main.rs  tests.rs
crates/aaai-cli/src/cmd/: audit.rs  check.rs  completions.rs  config.rs  dashboard.rs  diff_cmd.rs  exit_codes.rs  export.rs  history.rs  init.rs  lint.rs  merge.rs  mod.rs  next_hint.rs  report.rs  snap.rs  version_cmd.rs  watch.rs
crates/aaai-core/: Cargo.toml  README.md
crates/aaai-core/benches/: diff_bench.rs
crates/aaai-core/src/: lib.rs
crates/aaai-core/src/audit/: engine.rs  mod.rs  result.rs  tests.rs  warning.rs
crates/aaai-core/src/config/: definition.rs  io.rs  lock.rs  mod.rs  tests.rs
crates/aaai-core/src/diff/: engine.rs  entry.rs  ignore.rs  mod.rs  progress.rs  prop_tests.rs  tests.rs
crates/aaai-core/src/history/: record.rs  store.rs
crates/aaai-core/src/masking/: engine.rs  mod.rs  patterns.rs  prop_tests.rs  tests.rs
crates/aaai-core/src/profile/: mod.rs  prefs.rs  store.rs
crates/aaai-core/src/project/: config.rs  mod.rs
crates/aaai-core/src/report/: generator.rs  html.rs  mod.rs  sarif.rs
crates/aaai-core/src/templates/: library.rs
crates/aaai-gui/: Cargo.toml  README.md
crates/aaai-gui/locales/: en.yaml  ja.yaml
crates/aaai-gui/src/: app.rs  design_tokens.rs  error.rs  i18n.rs  main.rs  style.rs  theme.rs  util.rs
crates/aaai-gui/src/views/: batch.rs  dashboard.rs  diff_view.rs  help_overlay.rs  inspector.rs  main_view.rs  mod.rs  nav_guard.rs  opening.rs  settings_dialog.rs
crates/aaai/benches/: diff_bench.rs
crates/aaai/src/: audit.rs  config.rs  lib.rs
crates/aaai/src/audit/: engine.rs  strategy.rs  tests.rs  warning.rs
crates/aaai/src/audit/warning/: tests.rs
crates/aaai/src/config/: lock.rs  tests.rs
crates/aaai/src/config/lock/: tests.rs
crates/aaai/src/diff/: engine.rs  entry.rs  ignore.rs  progress.rs  tests.rs
crates/aaai/src/diff/ignore/: tests.rs
crates/aaai/src/diff/progress/: tests.rs
crates/aaai/src/history/: record.rs  store.rs
crates/aaai/src/history/store/: tests.rs
crates/aaai/src/masking/: engine.rs
crates/aaai/src/masking/engine/: tests.rs
crates/aaai/src/profile/: prefs.rs  store.rs
crates/aaai/src/profile/prefs/: tests.rs
crates/aaai/src/profile/store/: tests.rs
crates/aaai/src/project/: config.rs  tests.rs
crates/aaai/src/project/config/: tests.rs
crates/aaai/src/report/: generator.rs  sarif.rs
crates/aaai/src/report/sarif/: tests.rs
crates/aaai/src/templates/: library.rs
docs/: book.toml  release-prep-v0.20.0.md
docs/ja/: book.toml
docs/ja/src/: SUMMARY.md  abdd-audit.md  audit-definition.md  ci-integration.md  cli-auditing.md  cli-reporting.md  cli-setup.md  cli-workflow.md  cli.md  compatibility.md  faq.md  getting-started.md  gui.md  overview.md  strategies.md  testing.md  windows-store.md
docs/src/: SUMMARY.md  abdd-audit.md  audit-definition.md  ci-integration.md  cli-auditing.md  cli-reporting.md  cli-setup.md  cli-workflow.md  cli.md  compatibility.md  faq.md  getting-started.md  gui.md  overview.md  strategies.md  testing.md  windows-store.md
docs/templates/: visual-verification-operators-guide.md  visual-verification-template.md
packaging/windows/: Package.appxmanifest.template  README.md  make-msix.ps1  validate-msix.ps1
rfcs/: PLAN.md  README.md
rfcs/done/: 001-cli-output-ux.md  002-inspector-validation.md  003-abdd-status-display.md  004-opening-screen-validation.md  005-keyboard-navigation.md  006-report-output-ux.md  007-toolbar-navigation.md  008-bottom-action-bar.md  009-reason-textarea.md  010-diff-view-legend.md  011-diff-view-tabs.md  012-linematch-rule-display.md  013-file-tree-icon-unification.md  014-view-fixes.md  015-opening-screen-redesign.md  016-i18n-repair.md  017-visual-verification-harness.md  018-i18n-fallback-strategies.md  019-documentation-refresh.md  020-abdd-audit-and-error-messages.md  021-screen-navigation-continuity.md  022-empty-states-and-first-run.md  023-opening-dnd-and-recent.md  024-cli-dashboard-and-help.md  025-v1-0-release-prep.md  026-toast-error-hints.md  027-ci-mdbook-build.md  028-field-error-hint.md  029-field-error-i18n.md  030-field-error-hint-authoring.md  031-app-rs-i18n-sweep.md  032-views-i18n-sweep.md  033-picklist-display-value-separation.md  034-toast-dialog-format-i18n-sweep.md  035-strategy-label-display-value-separation.md  036-app-settings-dialog.md  037-async-rerun.md  038-keyboard-help-overlay.md  039-revert-to-pending.md  040-report-file-picker.md  (+55 more)
rfcs/proposed/: 007-toolbar-navigation.md  008-bottom-action-bar.md  011-diff-view-tabs.md  012-linematch-rule-display.md  013-file-tree-icon-unification.md  092-design-system-adoption.md  093-theme-picker-ui.md  094-high-contrast-themes.md
scripts/: bump-version.sh  check-i18n-keys.py  list-unverified-rfcs.sh
