[workspace]
resolver = "2"
members = [
    "crates/aaai-core",
    "crates/aaai-cli",
    "crates/aaai-gui",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["nabbisen"]
license = "Apache-2.0"
repository = "https://github.com/nabbisen/aaai"

[workspace.dependencies]
# Serialization
serde       = { version = "1",    features = ["derive"] }
serde_yaml  = "0.9"
serde_json  = "1"

# Error handling
thiserror = "2"
anyhow    = "1"

# Filesystem / traversal
walkdir = "2"

# Path pattern matching (Phase 2)
glob = "0.3"

# Hashing
sha2 = "0.10"
hex  = "0.4"

# Diff algorithm
similar = { version = "2" }

# Regex
regex = "1"

# CLI
clap    = { version = "4", features = ["derive", "color"] }
colored = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# GUI
iced  = { version = "0.14", features = ["tokio"] }
snora = "0.8"

# i18n (Phase 2)
rust-i18n = "3"

# Home directory (for history / profiles)
dirs = "6"

# Logging
log        = "0.4"
env_logger = "0.11"

# Async
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level   = "z"
lto         = true
strip       = true
codegen-units = 1

[profile.dev]
opt-level   = 1
incremental = false
