[package]
name        = "aaai-gui"
description = "GUI for aaai — audit for asset integrity"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
readme       = "README.md"
documentation       = "https://github.com/nabbisen/aaai/blob/main/docs/src/gui.md"
homepage       = "https://nabbisen.github.io/aaai"

[[bin]]
name = "aaai-gui"
path = "src/main.rs"

[dependencies]
aaai-core  = { path = "../aaai-core", version = "0.10.1" }
iced       = { workspace = true }
snora      = { workspace = true }
anyhow     = { workspace = true }
log        = { workspace = true }
env_logger = { workspace = true }
chrono     = { workspace = true }
similar    = { workspace = true, features = ["unicode"] }
tokio      = { workspace = true }
rust-i18n  = { workspace = true }
