[package]
name        = "aaai"
description = "Core engine for aaai — audit for asset integrity"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
readme               = "README.md"
documentation        = "https://docs.rs/aaai"
categories.workspace = true
keywords.workspace   = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
serde      = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
walkdir    = { workspace = true }
glob       = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
similar    = { workspace = true }
regex      = { workspace = true }
chrono     = { workspace = true }
log        = { workspace = true }
rayon      = { workspace = true }
dirs       = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
proptest  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "diff_bench"
harness = false
